CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
PROJECT(app.cgi)

SET (${PROJECT_NAME}_MAJOR_VERSION 1)
SET (${PROJECT_NAME}_MINOR_VERSION 0)
SET (${PROJECT_NAME}_PATCH_VERSION 0)


SET(DEFAULT_BUILD_TYPE "Release")
IF(EXISTS "${DEFAULT_BUILD_TYPE}")
	SET(DEFAULT_BUILD_TYPE "Debug")
ENDIF()
 
IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
	MESSAGE(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
	SET(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
	SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)

IF (UNIX)
	# UNIX specific stuff
	ADD_DEFINITIONS(-g)
ENDIF(UNIX)

ENABLE_TESTING()

SET(CPACK_GENERATOR "ZIP")
SET(CPACK_COMPONENTS_ALL  applications libraries) 
SET(CPACK_OUTPUT_FILE_PREFIX packages)
INCLUDE(CPack)

ADD_SUBDIRECTORY (${PROJECT_SOURCE_DIR}/app)
