CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBIITY)
PROJECT(app.cgi)
SET (${PROJECT_NAME}_MAJOR_VERSION 1)
SET (${PROJECT_NAME}_MINOR_VERSION 0)
SET (${PROJECT_NAME}_PATCH_VERSION 0)

FILE(GLOB Hdrs ${PROJECT_SOURCE_DIR}/include/*.h)
FILE(GLOB Impl ${PROJECT_SOURCE_DIR}/src/*.c)
SET (SOURCES ${Hdrs} ${Impl})
	
######################################################
# Basic packages:
######################################################
FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS}
			${PROJECT_SOURCE_DIR}/include
			${CMAKE_BINARY_DIR})

SET(CMAKE_DEBUG_POSTFIX d) 


SET(CMAKE_DEBUG_POSTFIX d) 
SET (LIBRARIES_TO_IMPORT_DEBUG)
SET (LIBRARIES_TO_IMPORT_OPTIMIZED ${SDL2_LIBRARY})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PYTHON_LIBRARIES})

get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
foreach(dir ${dirs})
  message(STATUS "dir='${dir}'")
endforeach()

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION build COMPONENT applications)
